# jax_examples

./: .gitignore  01_basic_matrix.ipynb  02_differentiation.ipynb  03_diff_on_vectors.ipynb  04_random_numbers_and_arrays.ipynb  05_jit.ipynb  05_transforms_in_jax.ipynb  06_vmap.ipynb  07_autodiff_and_linear_regression.ipynb  08_ann_optax.ipynb  08_ann_optax_flax.ipynb  09_lin_reg_optax.ipynb  10_mini_batches_dataloading.ipynb  11_pos_tag_lstm.ipynb  12_cnn_cifar10.ipynb  13_model_checkpointing.ipynb  14_fine_tune.ipynb  Dockerfile  LICENSE  Pipfile  README.md  auto_vectorization.ipynb  azure-pipelines.yml  basic_matrix.ipynb  check_device.py  ci.Dockerfile  devcontainer.Dockerfile  env.yml  environment.yml  jax_req.txt  pyproject.toml  requirements-nix.txt  requirements-win.txt  requirements.txt  sanity_check.py  setup.sh  start.ipynb
.devcontainer/: devcontainer.json
.devcontainer/cpu/: devcontainer.json
.devcontainer/gpu/: devcontainer.json
.github/workflows/: docker-image.yml  jax-check.yml
playground/: ann.ipynb  ann_flax.ipynb  auto_vmap.ipynb  bert_fine_tune.ipynb  bert_sentiment.ipynb  checkpointing_models.ipynb  clear_ml_log_ltsm.ipynb  cnn_resnet.ipynb  convert_pt_model.ipynb  corpus.py  fine_tune_bert.ipynb  flax_bert_ft.ipynb  jit_vs_simple_loop.ipynb  linreg_jax_official_example.ipynb  palmers_penguins.ipynb  pmap.ipynb  pos_tagging_lstm.ipynb  text_clf_cnn.ipynb  unigram.ipynb  vmap.ipynb  vmap_cpu.ipynb
utils/: device.py  pre_polarity.py  sanity_check.py
ven/: pyvenv.cfg
ven/Scripts/: activate  activate.bat
