[project]
name = "jax-examples"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "altair>=5.5.0",
    "autopep8>=2.3.2",
    "blackjax>=1.2.5",
    "brax>=0.12.1",
    "chex>=0.1.89",
    "datasets>=3.3.2",
    "einops>=0.8.1",
    "equinox>=0.11.12",
    "flax>=0.10.4",
    "gym>=0.26.2",
    "imax>=0.0.1b11",
    "ipython>=9.0.1",
    "jax-dataloader>=0.1.3",
    "jax[cuda12]>=0.5.1",
    "jraph>=0.0.6.dev0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.1",
    "optax>=0.2.4",
    "orbax>=0.1.9",
    "pandas>=2.2.3",
    "rlax>=0.1.6",
    "scikit-image>=0.25.2",
    "scikit-learn>=1.6.1",
    "transformers>=4.49.0",
]
